# TickForge

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_order_book.cpp  bench_replay.cpp  bench_ring_buffer.cpp
data/: sample_events.csv
include/tickforge/: benchmark_runner.hpp  csv_parser.hpp  latency_profiler.hpp  market_event.hpp  order_book.hpp  replay_engine.hpp  spsc_ring_buffer.hpp
reports/: PROFILING.md  aapl_2012-06-21_findings.md  aapl_2012-06-21_validation.txt  benchmark_numbers.txt  profile.json.syms.json
scripts/: compare_lobster_snapshot.py  flamegraph_notes.md  generate_synthetic_events.py  lobster_to_tickforge.py  plot_latency.py  validate_lobster_replay.py
src/: benchmark_runner.cpp  csv_parser.cpp  latency_profiler.cpp  main.cpp  order_book.cpp  replay_engine.cpp
tests/: test_csv_parser.cpp  test_order_book.cpp  test_replay_determinism.cpp  test_spsc_ring_buffer.cpp
